--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,17 @@ canvas {
     width: 100%;
     height: 100%;
     grid-area: controls;
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    width: 80%;
+    align-self: center;
+    margin: 2rem;
+    height: 3rem;
+    border: none;
+    background-color: lightgrey;
 }
 
 #graph {
