--- a/css/style.css
+++ b/css/style.css
@@ -22,22 +22,25 @@ canvas {
 }
 
 #controls {
-    width: 100%;
-    height: 100%;
     grid-area: controls;
     display: flex;
     flex-direction: column;
+    padding: 2rem;
 }
 
 button {
-    width: 80%;
+    width: 100%;
     align-self: center;
-    margin: 2rem;
     height: 3rem;
     border: none;
     background-color: lightgrey;
+    margin: 0.5rem 0;
 }
 
 #graph {
     grid-area: graph;
+}
+
+.total {
+    margin: 0.5rem 0;
 }
